<resources>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <plurals name="field">
        <item quantity="zero">0 fields</item>
        <item quantity="one">a field</item>
        <item quantity="other">%d fields</item>
    </plurals>
    <string name="msg_reminder_omitted">The omitted reminder</string>
    <string name="msg_sort">Sort by</string>
    <string name="msg_sort_method_timestamp">Logged Time</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_save">Save</string>
    <string name="msg_send">Send</string>
    <string name="msg_allow_permission">Check permissions</string>
    <string name="msg_format_confirm_apply_change">Apply changes to the %1$s before closing?</string>
    <string name="msg_format_confirm_save_creation">Save new %1$s before closing?</string>
    <string name="msg_text_tracker">Tracker</string>
    <string name="msg_text_field">Field</string>
    <string name="msg_text_item">Item Log</string>
    <string name="msg_confirm_log">Log Item</string>
    <string name="msg_go_to_add_field">Go to edit tracker</string>
    <string name="msg_confirm_empty_tracker_log">This tracker has no fields. Do you want to log present time only?</string>
    <string name="msg_confirm_remove_tracker">Remove this tracker?</string>
    <string name="msg_confirm_remove_connection">Disconnect with the external source?</string>
    <string name="msg_tracker_empty">No trackers yet. \nStart tracking by adding a new tracker.</string>
    <string name="msg_trigger_empty">No triggers yet.\nAdd a trigger to log tracker items automatically.</string>
    <string name="msg_reminder_empty">No reminders yet.\nAdd a reminder to notice you not to forget tracking.</string>
    <string name="msg_confirm_item_detail_close">Discard the input and close the input screen?</string>
    <string name="msg_save_current_input">Save Item</string>
    <string name="msg_visit_survey_website">Next Step</string>
    <string name="msg_save_item_anyway">Save Item without Survey</string>
    <string name="msg_redirected_page_canceled">You canceled the Qualtrics survey.</string>
    <string name="msg_reopen_redirected_page">Open Again</string>
    <string name="msg_confirm_cancel_and_close_process">Close the page without completion?</string>
    <string name="msg_reminder_open_input">Respond Now</string>
    <string name="msg_reminder_skip">Skip Response</string>
    <string name="msg_field_empty">Currently this tracker contains no fields.\nIt will log timestamp only.</string>
    <string name="msg_change_screen_name">Change your screen name</string>
    <string name="msg_format_change_name">Change %1$s name</string>
    <string name="msg_change_field_name">Change field name</string>
    <string name="msg_new_tracker_name">Input tracker name</string>
    <string name="msg_new_field_name">Input field name</string>
    <string name="msg_confirm_order">Apply the revised order to the list?</string>
    <string name="msg_discard_apply">Discard</string>
    <string name="msg_ok">OK</string>
    <string name="msg_apply">Apply</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_discard_creation">Don\'t Create</string>
    <string name="msg_do_not_save">Don\'t Save</string>
    <string name="msg_tab_trackers">Trackers</string>
    <string name="msg_tab_services">Services</string>
    <string name="msg_tab_background_loggers">Triggers</string>
    <string name="msg_tab_tracker_detail_structure">Structure</string>
    <string name="msg_tab_tracker_detail_reminders">Reminders</string>
    <string name="msg_tab_experiments">Experiments</string>
    <string name="msg_tab_invitations">Invitations</string>
    <string name="msg_edit">Edit</string>
    <string name="msg_data_list">Items</string>
    <string name="msg_remove">Delete</string>
    <string name="msg_format_edit_something">Edit %1$s</string>
    <string name="msg_format_new_something">New %1$s</string>
    <string name="msg_sort_descending">Descending</string>
    <string name="msg_sort_ascending">Ascending</string>
    <string name="msg_format_reminder_noti_title">Please log the %1$s entry</string>
    <string name="msg_basic_information">Basic Information</string>
    <string name="msg_attributes">Fields</string>
    <string name="msg_attribute_removed_message">The field was removed</string>
    <string name="msg_add_new_attribute">Add new field</string>
    <string name="msg_item_removed_message">The item was removed</string>
    <string name="msg_item_remove_confirm">Deleting item cannot be undone. Do you want to remove this item?</string>
    <string name="msg_new_item_confirm_restore_previous_input">Previously input forms are stored. Do you want to restore the data?</string>
    <string name="msg_trigger_remove_confirm">Delete this trigger? This cannot be undone.</string>
    <string name="msg_clear_form">Reset</string>
    <string name="msg_undo">Undo</string>
    <string name="msg_color">Color</string>
    <string name="msg_name">Name</string>
    <string name="msg_required">Required</string>
    <string name="msg_never_logged">Never Logged</string>
    <string name="msg_todays_log">Today\'s</string>
    <string name="msg_show_on_shortcut">Show on Shortcut</string>
    <string name="msg_attribute">Field</string>
    <string name="msg_new_tracker_prefix">My Tracker</string>
    <string name="msg_attribute_fallback_policy">Fallback Value Rule</string>
    <string name="msg_attribute_fallback_policy_null">Set empty</string>
    <string name="msg_attribute_fallback_policy_last">Fill with the previous logging value</string>
    <string name="msg_attribute_fallback_policy_preset">Fill with the preset value</string>
    <string name="msg_attribute_fallback_policy_timespan_connect_previous">Start from the end of the previous item</string>
    <string name="msg_value_autocompletion">Value Autocompletion</string>
    <string name="msg_column_name">Field Name</string>
    <string name="msg_charts">Charts</string>
    <string name="msg_pick_date">Pick date</string>
    <string name="msg_pick_time">Pick time</string>
    <string name="msg_pick_date_and_time">Pick date and time</string>
    <string name="msg_pick_track_to_attach_field_with_measure">Pick a tracker to append field connected with the measure</string>
    <string name="msg_set_new_connection">Connect to External Source</string>
    <string name="msg_notification_title_format_new_item">New item was logged to %1$s</string>
    <string name="msg_notification_content_new_item">Tap to edit the item.</string>
    <string name="msg_notification_format_inbox_title">New %1$s Log</string>
    <string name="msg_item_list_empty_message">No items collected yet.</string>
    <string name="msg_builder_restored">Restored form contents that were not saved.</string>
    <string name="sentence_new_tracker_added">Tracker \'%1$s\' was added</string>
    <string name="action_settings">Settings</string>
    <string name="msg_format_removed_outside_return_home">The %1$s was removed outside. This screen will be closed.</string>
    <string name="msg_connection_wizard_title_source_selection">Choose a data source</string>
    <string name="msg_connection_wizard_title_time_query">Configure time query</string>
    <string name="msg_connection_wizard_time_query_pivot_time">Reference time</string>
    <string name="msg_connection_wizard_time_query_scope">Scope size</string>
    <string name="msg_connection_wizard_time_query_offset">Offset</string>
    <string name="msg_connection_wizard_time_query_scope_hour">Hour</string>
    <string name="msg_connection_wizard_time_query_scope_day">Day</string>
    <string name="msg_connection_wizard_time_query_scope_week">Week</string>
    <string name="msg_connection_wizard_time_query_preset">Query range</string>
    <string name="msg_connection_wizard_time_query_pivot_present">Present time</string>
    <string name="msg_connection_wizard_time_query_pivot_field_format">\'%1$s\' Field</string>
    <string name="msg_connection_panel_time_query">Time Query</string>
    <string name="msg_connection_panel_connected_with">Connected with</string>
    <string name="msg_format_login_to">Login to %1$s</string>
    <string name="msg_noti_tap_for_tracking_format">Tap to open %1$s</string>
    <string name="msg_noti_reminder_until">Until %1$s</string>
    <string name="msg_no_trackers_are_assigned">No trackers are assigned.</string>
    <string name="msg_pick_tracker">Pick a tracker</string>
    <string name="msg_present_date">Present date</string>
    <string name="msg_present_date_desc">Query from midnight to present</string>
    <string name="msg_previous_date">Previous date</string>
    <string name="msg_previous_date_desc">Query for previous date</string>
    <string name="msg_recent_hour">Recent one hour</string>
    <string name="msg_recent_hour_desc">Query from an hour ago to present</string>
    <string name="msg_recent_24_hours">Recent 24 hours</string>
    <string name="msg_recent_24_hours_desc">Query from 24 hours ago to present</string>
    <string name="msg_recent_7_days">Recent 7 days</string>
    <string name="msg_recent_7_days_desc">Query from 7 days ago to present</string>
    <string name="msg_present_week">Present week</string>
    <string name="msg_present_week_desc">Query from last sunday midnight to present</string>
    <string name="msg_demographic_title">Demographic Information</string>
    <string name="msg_demographic_gender">What is your gender?</string>
    <string name="msg_demographic_age">What is your age?</string>
    <string name="msg_demographic_nationality">Which country you live in?</string>
    <string name="msg_tab_to_take_a_photo">Tab to take a photo</string>
    <string name="msg_turn_to_selfie">Turn to Selfie</string>
    <string name="msg_turn_to_rear">Turn to Rear-cam</string>
    <string name="msg_form_widget_title">Widget Title</string>
    <string name="msg_widget_list_type">List Type</string>
    <string name="msg_widget_mode_display_all_trackers">Display all trackers</string>
    <string name="msg_widget_mode_display_shortcut_trackers">Display shortcut trackers</string>
    <string name="msg_widget_mode_display_selected_trackers">Display selected trackers</string>
    <string name="msg_widget_mode_selected_trackers">Tracker List</string>
    <string name="msg_current_version">Current Version</string>
    <string name="msg_latest_version">Latest Version</string>
    <string name="msg_button_label_latest_version">This is the latest version.</string>
    <string name="msg_pref_title_show_shortcut_panel">Maintain Shortcut Panel on Notifications</string>
    <string name="msg_pref_summary_show_shortcut_panel">Shows favorite trackers on notification bar</string>
    <string name="msg_pref_summary_notify_new_update">Notifies when new update available. We frequently release new features, so stay tuned!</string>
    <string name="msg_pref_title_notify_new_update">Notify New Update</string>
    <string name="msg_pref_reminder_noti_rington_title">Reminder Notification Ringtone</string>
    <string name="msg_pref_category_general">General</string>
    <string name="time_range_picker_30_mins">+ 30 mins</string>
    <string name="time_range_picker_1_hour">+ 1 hour</string>
    <string name="msg_time_range_picker_to_now">To Now</string>
</resources>