<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        style="@style/IntroTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_demographic_title"
        android:textColor="@color/textColorDark" />

    <TextView
        style="@style/PropertyHeaderStyle.withMargin"
        android:layout_marginTop="0dp"
        android:text="@string/msg_demographic_gender" />

    <kr.ac.snu.hcil.omnitrack.ui.components.common.choice.SelectionView
        android:id="@+id/ui_gender_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        style="@style/PropertyHeaderStyle.withMargin"
        android:text="@string/msg_demographic_age" />

    <kr.ac.snu.hcil.omnitrack.ui.components.common.ExtendedSpinner
        android:id="@+id/ui_age_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_formlike"
        app:arrowResource="@drawable/down" />

    <!--
    <TextView
        style="@style/PropertyHeaderStyle.withMargin"
        android:text="@string/msg_demographic_occupation" />

    <kr.ac.snu.hcil.omnitrack.ui.components.common.ExtendedSpinner
        android:id="@+id/ui_occupation_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_formlike"
        android:textColor="@color/textColorMidDark"
        app:arrowResource="@drawable/down" />-->


    <TextView
        style="@style/PropertyHeaderStyle.withMargin"
        android:text="@string/msg_demographic_nationality" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/ui_country_selector"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_formlike"
        android:drawablePadding="12dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="Republic of Korea"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp" />

</LinearLayout>
