<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/msg_form_widget_title" />

                <EditText
                    android:id="@+id/ui_form_title"
                    style="@style/ShortTextFormStyle"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="OmniTrack"
                    android:text="OmniTrack" />


                <TextView
                    style="@style/SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:text="@string/msg_widget_list_type" />

                <RadioGroup
                    android:id="@+id/ui_radio_group_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/ui_radio_mode_all"
                        style="@style/RadioButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/msg_widget_mode_display_all_trackers"
                        android:textColor="@color/textColorMid" />

                    <RadioButton
                        android:id="@+id/ui_radio_mode_shortcut"
                        style="@style/RadioButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_widget_mode_display_shortcut_trackers"
                        android:textColor="@color/textColorMid" />

                    <RadioButton
                        android:id="@+id/ui_radio_mode_selective"
                        style="@style/RadioButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_widget_mode_display_selected_trackers"
                        android:textColor="@color/textColorMid" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/ui_group_selected_trackers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/SubTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:text="@string/msg_widget_mode_selected_trackers" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/ui_list_selected_trackers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fadeScrollbars="false"
                        android:scrollbars="vertical"
                        android:verticalScrollbarPosition="left" />
                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/common_twobuttons_bottom" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>