<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_current_version"
                android:textColor="@color/textColorMid"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ui_current_version"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="Not loaded"
                android:textColor="@color/textColorLight" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_latest_version"
                android:textColor="@color/textColorMid"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ui_latest_version"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="Not loaded" />
        </TableRow>
    </TableLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/ui_store_button"
        style="@style/PointedColoredButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textAllCaps="false"
        android:textSize="16sp"

        tools:text="@string/msg_button_label_latest_version" />
</LinearLayout>